auto create a bucket when start services
